add theme color 'Medium Persian Blue'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="layout-reverse">
+  <body class="layout-reverse theme-base-18">
 
     {% include sidebar.html %}
 
