--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,11 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/" | relative_url }}public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" href="{{ "/" | relative_url }}public/favicon.ico">
+  <link rel="shortcut icon" href="{{ "/" | relative_url }}public/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <!-- Font Awesome 5 -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 </head>
