--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == "/" | relative_url %} active{% endif %}" href="{{ "/" | relative_url }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == "/" | relative_url %} active{% endif %}" href="{{ "/" | relative_url }}">Blog</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -26,11 +26,16 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Archives</a>
+      <a class="sidebar-nav-item" href="">Resume</a>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <div class="links">
+      <li><a href="https://www.linkedin.com/in/adelinewei/"><i class="fab fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
+      <li><a href="https://github.com/Adeline-Wei"><i class="fab fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.researchgate.net/profile/Lin_Hung_Wei2"><i class="fab fa-researchgate fa-2x"></i></a></li>
+    </div>
+
+    <span style="text-align: center;font-size: 0.5rem"><p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p></span>
   </div>
 </div>
