--- a/public/css/customize.css
+++ b/public/css/customize.css
@@ -6,3 +6,15 @@
   list-style: none;
   display: inline-block;
 }
+
+/* Information below post title */
+.post-info span {
+  margin-right: 1rem;
+}
+.post-info {
+  margin-top: -0.5rem;
+  margin-bottom: 1rem;
+  padding-left: 0.15rem;
+  font-size: 0.8rem;
+  color: #9a9a9a;
+}
