--- a/public/css/customize.css
+++ b/public/css/customize.css
@@ -8,12 +8,13 @@
 }
 
 /* Information below post title */
-.post-info span {
+.post-info .post-date {
+  display: inline-block;
   margin-right: 1rem;
 }
 .post-info {
-  margin-top: -0.5rem;
-  margin-bottom: 1rem;
+  margin-top: -0.25rem;
+  margin-bottom: 0.5rem;
   padding-left: 0.15rem;
   font-size: 0.8rem;
   color: #9a9a9a;
