--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,7 +48,7 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -59,6 +59,7 @@ html {
 }
 
 body {
+  font-family: Helvetica, Arial, NotoSansCJKtc, sans-serif;
   color: #515151;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
