--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,14 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date: '%d %B, %Y' }}</span>
+  <div class="post-info">
+      <i class="fas fa-calendar-alt"></i>
+      <span class="post-date">{{ page.date | date: '%d %B, %Y' }}</span>
+      <i class="fas fa-box"></i>
+      <span></span>
+      <i class="fas fa-comments"></i>
+  </div>
+  <!-- <span class="post-date">{{ page.date | date: '%d %B, %Y' }}</span> -->
   {{ content }}
 </div>
 
@@ -13,12 +20,12 @@ layout: default
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
-        <h3>
+        <h4>
           <a href="{{ post.url }}">
             {{ post.title }}
             <small>{{ post.date | date: '%d %B, %Y' }}</small>
           </a>
-        </h3>
+        </h4>
       </li>
     {% endfor %}
   </ul>
