--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,10 +10,12 @@ layout: default
       <i class="fas fa-box"></i>
       <span></span>
       <i class="fas fa-comments"></i>
+      <a href="{{ content.absolute_url }}#disqus_thread"></a>
   </div>
-  <!-- <span class="post-date">{{ page.date | date: '%d %B, %Y' }}</span> -->
   {{ content }}
 </div>
+
+{% include comments.html %}
 
 <div class="related">
   <h2>Related Posts</h2>
