--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,10 +7,8 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-	// this.page.url = 'https://adeline-wei.github.io';  // Replace PAGE_URL with your page's canonical URL variable
-	this.page.url = PAGE_URL;
-	// this.page.url = '{{ site.url }}/{{ page.url }}';
-	this.page.identifier = '{{ page.url }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+	this.page.url = '{{ site.url }}';	// Replace PAGE_URL with your page's canonical URL variable
+	this.page.identifier = '{{ page.url }}';	// Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
