add comments and counter

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
       <i class="fas fa-box"></i>
       <span></span>
       <i class="fas fa-comments"></i>
-      <a href="{{ page.url }}#disqus_thread"></a>
+      <a href="{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}"></a>
   </div>
   {{ content }}
 </div>
